log
Thu 25 Apr 2024 04:03:29 PM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:41:8: error: expected expression before ‘,’ token
   41 |   hash(, long capacity)
      |        ^
hashmap.c:41:24: error: expected ‘;’ before ‘}’ token
   41 |   hash(, long capacity)
      |                        ^
      |                        ;
   42 | }
      | ~                       
Compilation failed
69a7561
Thu 25 Apr 2024 04:03:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
77bdce8
Sat 27 Apr 2024 02:43:44 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
5a77300
Sat 27 Apr 2024 03:08:31 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
4316139
Sat 27 Apr 2024 03:21:38 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
cde06d4
Sat 27 Apr 2024 03:24:04 AM UTC: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  1|5
total_score: 10/70
1ff9a90
Sat 27 Apr 2024 03:33:58 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:45: error: ‘Bucket’ undeclared (first use in this function)
   46 |           map->buckets[pos] = malloc(sizeof(Bucket));
      |                                             ^~~~~~
hashmap.c:46:45: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c027a2b
Sat 27 Apr 2024 03:36:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:45: error: ‘buckets’ undeclared (first use in this function)
   46 |           map->buckets[pos] = malloc(sizeof(buckets));
      |                                             ^~~~~~~
hashmap.c:46:45: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
40ce62a
Sat 27 Apr 2024 03:37:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
30d45cc
Sat 27 Apr 2024 03:38:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7bb0ca0
